force-app/main/default/objects/Hotline_Call__c/Hotline_Call__c.object-meta.xml
<CustomObject>
    <description>One record per call to the 24/7 hotline. Priority object for the SFTS build. Contact lookup is optional (ADR-007) — anonymous callers create records without a Contact link.</description>
    <label>Hotline Call</label>
    <nameField>
        <displayFormat>HC-{00000}</displayFormat>
        <label>Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotline Calls</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>