force-app/main/default/objects/Hotline_Call__c/fields/Advocate__c.field-meta.xml
<CustomField>
    <fullName>Advocate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advocate (User) who took this call. Will default to the current user via the screen flow.</description>
    <label>Advocate</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Hotline Calls Taken</relationshipLabel>
    <relationshipName>Hotline_Calls_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>