force-app/main/default/objects/Hotline_Call__c/fields/Auto_In_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Auto_In_Service_Area__c</fullName>
    <description>Computed: TRUE when Caller_County__c is in SFTS's service area per ADR-011 (Marion, Shelby, Johnson, Hancock). Read-only. The manual In_Service_Area__c checkbox remains for edge cases (e.g., caller from outside the four counties but who would still be served).</description>
    <formula>OR(
  ISPICKVAL(Caller_County__c, "Marion"),
  ISPICKVAL(Caller_County__c, "Shelby"),
  ISPICKVAL(Caller_County__c, "Johnson"),
  ISPICKVAL(Caller_County__c, "Hancock")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto In Service Area</label>
    <type>Checkbox</type>
</CustomField>