force-app/main/default/objects/Hotline_Call__c/fields/Call_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Call_End_DateTime__c</fullName>
    <description>When the hotline call ended. Required to close the call.</description>
    <label>Call End Date/Time</label>
    <type>DateTime</type>
</CustomField>