force-app/main/default/objects/Hotline_Call__c/fields/Call_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_DateTime__c</fullName>
    <description>When the hotline call began. Defaults to NOW() at record creation.</description>
    <label>Call Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>