force-app/main/default/objects/Hotline_Call__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>Functional category of the call.</description>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Crisis</fullName><default>false</default><label>Crisis</label></value>
            <value><fullName>Information Only</fullName><default>false</default><label>Information Only</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Shelter Inquiry</fullName><default>false</default><label>Shelter Inquiry</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>