force-app/main/default/objects/Hotline_Call__c/fields/Caller_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Caller_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Explicitly flag this call as anonymous. When true, Contact and Caller_Name should generally be blank.</description>
    <label>Caller Anonymous</label>
    <type>Checkbox</type>
</CustomField>