force-app/main/default/objects/Hotline_Call__c/fields/Caller_County__c.field-meta.xml
<CustomField>
    <fullName>Caller_County__c</fullName>
    <description>County in which the caller resides. Drives the In_Service_Area flag once service-area logic is wired up.</description>
    <label>Caller County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indiana_County</valueSetName>
    </valueSet>
</CustomField>