force-app/main/default/objects/Hotline_Call__c/fields/Caller_Email__c.field-meta.xml
<CustomField>
    <fullName>Caller_Email__c</fullName>
    <description>Email address the caller used or provided. Mutually exclusive with Caller_Phone__c — the website quick-intake form has a single "phone or email" field, and the Netlify Function routes the value here when it contains '@'.</description>
    <label>Caller Email</label>
    <type>Email</type>
</CustomField>