force-app/main/default/objects/Hotline_Call__c/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <description>Free-text name the caller provided. Use this when a name is given but the caller has not been added as a Contact record (per ADR-007 anonymous-call handling).</description>
    <label>Caller Name (text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>