force-app/main/default/objects/Hotline_Call__c/fields/Caller_Phone__c.field-meta.xml
<CustomField>
    <fullName>Caller_Phone__c</fullName>
    <description>Phone number the caller used or provided. Optional — many anonymous calls do not share a number.</description>
    <label>Caller Phone</label>
    <type>Phone</type>
</CustomField>