force-app/main/default/objects/Hotline_Call__c/fields/Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>Caller_Type__c</fullName>
    <description>Who placed the call. "Hangup" captures very-short calls that disconnected before info exchange.</description>
    <label>Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Survivor</fullName><default>false</default><label>Survivor</label></value>
            <value><fullName>Concerned Person</fullName><default>false</default><label>Concerned Person (friend/family)</label></value>
            <value><fullName>Professional</fullName><default>false</default><label>Professional (LE, medical, school, etc.)</label></value>
            <value><fullName>Hangup</fullName><default>false</default><label>Hangup / No Info</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>