force-app/main/default/objects/Hotline_Call__c/fields/Completeness_Status__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Status__c</fullName>
    <description>Tier-1 completeness flag for Hotline_Call. The website fills the caller-side; this checks the advocate-side fields (Outcome, Contact link, Outcome_Notes, Advocate). List-view-filterable to find calls awaiting follow-up.</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(TEXT(Outcome__c))),
    NOT(ISNULL(Contact__c)),
    NOT(ISNULL(Advocate__c)),
    NOT(ISNULL(Call_End_DateTime__c))
  ),
  "✓ Complete",
  "⚠ Needs review: " &amp;
    IF(ISBLANK(TEXT(Outcome__c)), "Outcome · ", "") &amp;
    IF(ISNULL(Contact__c), "Contact link · ", "") &amp;
    IF(ISNULL(Advocate__c), "Advocate assigned · ", "") &amp;
    IF(ISNULL(Call_End_DateTime__c), "Call end time · ", "")
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Completeness Status</label>
    <type>Text</type>
</CustomField>