force-app/main/default/objects/Hotline_Call__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to a Contact if the caller has been identified. Per ADR-007, this is intentionally optional — anonymous calls are stored without a Contact reference.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hotline Calls</relationshipLabel>
    <relationshipName>Hotline_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>