force-app/main/default/objects/Hotline_Call__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>Computed call duration in minutes, rounded down. Returns blank until both start and end times are set.</description>
    <formula>IF(
  AND(NOT(ISBLANK(Call_Start_DateTime__c)), NOT(ISBLANK(Call_End_DateTime__c))),
  FLOOR((Call_End_DateTime__c - Call_Start_DateTime__c) * 24 * 60),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>