force-app/main/default/objects/Hotline_Call__c/fields/Imminent_Danger_Indicated__c.field-meta.xml
<CustomField>
    <fullName>Imminent_Danger_Indicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caller or call content indicates imminent danger to a person's life or safety. Triggers high-priority follow-up.</description>
    <label>Imminent Danger Indicated</label>
    <type>Checkbox</type>
</CustomField>