force-app/main/default/objects/Hotline_Call__c/fields/In_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this caller is in SFTS's service area. v1 is a manual checkbox set by the advocate; v2 will become a formula based on Caller_County__c once the service-area county list is finalized.</description>
    <label>In Service Area</label>
    <type>Checkbox</type>
</CustomField>