force-app/main/default/objects/Hotline_Call__c/fields/Intake_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Intake_Initiated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the call resulted in starting a formal intake, link to the resulting caseman__Intake__c record.</description>
    <label>Intake Initiated</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Hotline Calls (Originating)</relationshipLabel>
    <relationshipName>Hotline_Calls_Originating</relationshipName>
    <type>Lookup</type>
</CustomField>