force-app/main/default/objects/Hotline_Call__c/fields/Mandatory_Report_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Report_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this call triggered a mandatory report (APS for endangered adult, DCS for child abuse, etc.). When checked, advocate must create a Mandatory_Report__c record and link it.</description>
    <label>Mandatory Report Triggered</label>
    <type>Checkbox</type>
</CustomField>