force-app/main/default/objects/Hotline_Call__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>What happened as a result of this call. A validation rule prevents closing the call (Call_End_DateTime set) without an Outcome being chosen.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Information Provided</fullName><default>false</default><label>Information Provided</label></value>
            <value><fullName>Referral Made</fullName><default>false</default><label>Referral Made</label></value>
            <value><fullName>Shelter Admitted</fullName><default>false</default><label>Shelter Admitted</label></value>
            <value><fullName>Safety Plan Created</fullName><default>false</default><label>Safety Plan Created</label></value>
            <value><fullName>Mandatory Report Filed</fullName><default>false</default><label>Mandatory Report Filed</label></value>
            <value><fullName>No Action</fullName><default>false</default><label>No Action Needed</label></value>
            <value><fullName>Hung Up</fullName><default>false</default><label>Caller Hung Up</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>