force-app/main/default/objects/Hotline_Call__c/fields/Outcome_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Notes__c</fullName>
    <description>Narrative description of the call, what was discussed, and what the advocate did. NEVER include the survivor's location if she has indicated she does not want it documented.</description>
    <label>Outcome Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>