force-app/main/default/objects/Hotline_Call__c/fields/Phone_Safe_To_Return__c.field-meta.xml
<CustomField>
    <fullName>Phone_Safe_To_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Critical safety field. When TRUE, an advocate may call this number back. When FALSE (or blank), DO NOT call back — abuser may have access to the phone.</description>
    <inlineHelpText>Only check this box if the caller has confirmed it is SAFE to call them back. When in doubt, leave unchecked.</inlineHelpText>
    <label>Phone Safe to Return</label>
    <type>Checkbox</type>
</CustomField>