force-app/main/default/objects/Hotline_Call__c/fields/Primary_Issue__c.field-meta.xml
<CustomField>
    <fullName>Primary_Issue__c</fullName>
    <description>The primary type of violence or victimization being reported by the caller. Use the closest match; multiple issues can be captured in Outcome_Notes.</description>
    <label>Primary Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Domestic Violence</fullName><default>false</default><label>Domestic Violence</label></value>
            <value><fullName>Sexual Assault</fullName><default>false</default><label>Sexual Assault</label></value>
            <value><fullName>Stalking</fullName><default>false</default><label>Stalking</label></value>
            <value><fullName>Human Trafficking</fullName><default>false</default><label>Human Trafficking</label></value>
            <value><fullName>Teen Dating Violence</fullName><default>false</default><label>Teen Dating Violence</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>