force-app/main/default/objects/Hotline_Call__c/listViews/Awaiting_Callback.listView-meta.xml
<ListView>
    <fullName>Awaiting_Callback</fullName>
    <columns>NAME</columns>
    <columns>Caller_Name__c</columns>
    <columns>Caller_Phone__c</columns>
    <columns>Caller_Email__c</columns>
    <columns>Phone_Safe_To_Return__c</columns>
    <columns>Primary_Issue__c</columns>
    <columns>Imminent_Danger_Indicated__c</columns>
    <columns>Call_Start_DateTime__c</columns>
    <columns>Advocate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Outcome__c</field>
        <operation>equals</operation>
        <value>Callback Scheduled,Information Provided</value>
    </filters>
    <filters>
        <field>Intake_Initiated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Awaiting Callback</label>
</ListView>