force-app/main/default/objects/Hotline_Call__c/listViews/High_Risk_Calls.listView-meta.xml
<ListView>
    <fullName>High_Risk_Calls</fullName>
    <columns>NAME</columns>
    <columns>Caller_Type__c</columns>
    <columns>Primary_Issue__c</columns>
    <columns>Imminent_Danger_Indicated__c</columns>
    <columns>Mandatory_Report_Triggered__c</columns>
    <columns>Outcome__c</columns>
    <columns>Call_Start_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Imminent_Danger_Indicated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>High-Risk Calls (Imminent Danger)</label>
</ListView>