force-app/main/default/objects/Hotline_Call__c/listViews/Open_Calls_Today.listView-meta.xml
<ListView>
    <fullName>Open_Calls_Today</fullName>
    <columns>NAME</columns>
    <columns>Caller_Type__c</columns>
    <columns>Primary_Issue__c</columns>
    <columns>Imminent_Danger_Indicated__c</columns>
    <columns>Outcome__c</columns>
    <columns>Call_Start_DateTime__c</columns>
    <columns>Advocate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Call_Start_DateTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Outcome__c</field>
        <operation>equals</operation>
    </filters>
    <booleanFilter>1 OR 2</booleanFilter>
    <label>Today's Calls (Open or Closed)</label>
</ListView>