force-app/main/default/objects/Hotline_Call__c/listViews/This_Week_Calls.listView-meta.xml
<ListView>
    <fullName>This_Week_Calls</fullName>
    <columns>NAME</columns>
    <columns>Caller_Name__c</columns>
    <columns>Caller_Type__c</columns>
    <columns>Primary_Issue__c</columns>
    <columns>Imminent_Danger_Indicated__c</columns>
    <columns>Outcome__c</columns>
    <columns>Call_Start_DateTime__c</columns>
    <columns>Advocate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Call_Start_DateTime__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week's Calls</label>
</ListView>